Fix checkbox not clickable on Firefox

--- a/styles/global.css
+++ b/styles/global.css
@@ -663,43 +663,10 @@ body .upfront-edit_layout a {
 @-moz-document url-prefix() {
 	input[type=checkbox] {
 		/* original check box are push outside the viexport */
-		position: absolute ;
-		left: -1000em !important;
-	}
-
-	input[type=checkbox] + label:before {
-		content: "";
-		display: inline-block;
-		width  : 12px;
-		height : 12px;
-		margin : 0 -1em 0 0;
-		background: url("../img/checkbox_firefox.png") no-repeat 0 0;
-
-		/* The following is used to adjust the position of
-		   the check boxes on the text baseline */
-
-		vertical-align: bottom;
-		position: relative;
-		bottom: 0;
-		top: -3px;
-		right: 17px;
-		cursor: pointer;
-	}
-
-	input[type=checkbox] + label.upfront_toggle_label:before {
-		display: none;
-	}
-
-	input[type=checkbox]:checked + label:before {
-		background-position: -24px 0;
-	}
-
-	input[type=checkbox]:disabled + label:before {
-		background-position: -12px 0;
-	}
-
-	input[type=checkbox]:checked:disabled + label:before {
-		background-position: 0 0;
+		position: absolute;
+		z-index: 9999999;
+		margin-left: -17px;
+		margin-top: 3px;
 	}
 
 	#element-settings-sidebar .border_radius_lock input[type=checkbox] + label:before,
